src/objects/TIP_BIN_Range__c.object
<CustomObject>
    <fields>
        <fullName>TIP_Effective_From_Date__c</fullName>
        <label>Effective From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIP_Effective_To_Date__c</fullName>
        <label>Effective To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIP_Range_End__c</fullName>
        <label>Range To</label>
        <length>19</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP_Range_Start__c</fullName>
        <label>Range From</label>
        <length>19</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BIN Range</label>
    <nameField>
        <label>BIN Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIN Ranges</pluralLabel>
    <recordTypes>
        <fullName>Listed_by_IATA</fullName>
        <active>true</active>
        <label>Listed by IATA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <label>Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Statistical</fullName>
        <active>true</active>
        <label>Statistical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>